# mcp-weather-server

./: .gitignore  README.md  pyproject.toml  test_mcp_client.py
.cursor/rules/: git-conventional-commits.mdc
src/mcp_weather_server/: server.py
