[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-weather-server"
version = "0.1.0"
description = "A Python MCP server exposing weather tools via the Model Context Protocol."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
dependencies = [
  "mcp>=1.1.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[project.scripts]
mcp-weather-server = "mcp_weather_server.server:main"

[tool.setuptools.packages.find]
where = ["src"]

